# engtogether

./: README.md  database.db  pyproject.toml  short_syntax.ipynb  t.py
backend/: main.py
backend/api/: coedits.py  exercises.py  grammars.py  spellings.py
backend/core/: config.py  database.py  models.py
backend/models/: coedit_model.py  grammar_model.py  pygect5_model.py  spelling_model.py
backend/schemas/: coedit.py  exercise.py  grammar.py  spelling.py
backend/services/: coedit_service.py  exercise_service.py  grammar_service.py  pygect5_service.py  spelling_service.py
backend/utils/: text_processing.py
frontend/: index.html
frontend/css/: style.css  styles.css
frontend/js/: api.js  main.js  script.js  ui.js  utils.js
tests/: test_coedit.py  test_grammar.py
