[project]
name = "engtogether"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "pydantic-settings>=2.10.1",
    "pyspellchecker>=0.8.3",
    "pytest>=8.4.1",
    "transformers>=4.56.0",
]
